exercises/16-ingress/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
      - image: bmuschko/nodejs-hello-world:1.0.0
        name: nodejs-hello-world
        ports:
        - containerPort: 3000
        resources: {}
status: {}
